integration-testing/charts/celery-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      ${IMAGE_PULL_SECRET_BLOCK}
      containers:
        - name: ${CELERY_WORKER_DEPLOYMENT}
          image: ${CELERY_WORKER_IMAGE}
          imagePullPolicy: Always
          resources:
            limits:
              cpu: ${CELERY_WORKER_CPUS}
              memory: ${CELERY_WORKER_MEMORY}
              ephemeral-storage: ${CELERY_WORKER_STORAGE}
            requests:
              cpu: ${CELERY_WORKER_CPUS}
              memory: ${CELERY_WORKER_MEMORY}
              ephemeral-storage: ${CELERY_WORKER_STORAGE}
