integration-testing/charts/learning-engine.yaml
---
# --- lerning-engine-service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-engine-service-deployment
  namespace: ${NAMESPACE}
  labels:
    app: learning-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learning-engine
  template:
    metadata:
      labels:
        app: learning-engine
    spec:
      containers:
        - name: ${LE_SERVICE_DEPLOYMENT}
          image: ${LE_SERVICE_IMAGE}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
---
# --- lerning-engine-service ---
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: ${LE_SERVICE_DEPLOYMENT}-service
  labels:
    app: learning-engine
spec:
  selector:
    app: learning-engine
  ports:
    - name: service
      port: ${LE_SERVICE_PORT}
      targetPort: 8080
  type: ClusterIP
