integration-testing/charts/mongodb-client.yaml
---
# --- mongo-express-deployment ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: ${NAMESPACE}
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: ${MONGO_DEPLOYMENT}-express
          image: mongo-express:1.0.2-20-alpine3.19
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          ports:
            - containerPort: 8080
---
# --- mongo-express-service ---
apiVersion: v1
kind: Service
metadata:
  name: ${MONGO_DEPLOYMENT}-express-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: ${MONGO_EXPRESS_PORT}
      targetPort: 8080
  type: LoadBalancer
