integration-testing/charts/mongodb.yaml
---
# --- mongo-deployment ---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.0.0
          ports:
            - containerPort: 27017 # MongoDB default port
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db # Directory where MongoDB stores its data
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init-mongo.js # Mount the initialization script
              subPath: init-mongo.js # Directory where MongoDB stores its data
      volumes:
        - name: mongodb-data
          emptyDir: {} # Can be replaced by a PersistentVolumeClaim for persistent data
        - name: init-script
          configMap:
            name: init-mongo-script

---
# --- mongo-service ---
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: ${MONGO_SERVICE}
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017 # MongoDB default port
      targetPort: 27017
  type: ClusterIP

---
# --- mongodb-alias-service ---
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-test-service
  namespace: ${NAMESPACE}
spec:
  type: LoadBalancer
  ports:
    - name: amqp
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
