integration-testing/charts/cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-http01-solver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/http01-ingress-class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "${DOMAIN}"
    http:
      paths:
      - path: /.well-known/acme-challenge/
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
