integration-testing/charts/ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: ${INGRESS_CLASS}
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: ${INGRESS_CLASS}
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: ${CLIENT_BASE_URL}
            pathType: Prefix
            backend:
              service:
                name: ${CLIENT_DEPLOYMENT}-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: le-service-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: ${INGRESS_CLASS}
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: ${INGRESS_CLASS}
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: learning-engine-service
                port:
                  number: 80
            path: ${LE_SERVICE_BASE_URL}
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: le-django-service-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: ${INGRESS_CLASS}
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: ${INGRESS_CLASS}
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: python-service
                port:
                  number: 80
            path: "/it/leDjangoService/(.*)"
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: le-django-service-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: ${INGRESS_CLASS}
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: ${CERTIFICATE_NAME}
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: python-service
                port:
                  number: 80
            path: "/it/leDjangoService/(.*)"
            pathType: Prefix
